--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,7 +62,6 @@ body{
  /* -----------Main part Start--------- */
  .main-container{
      display: flex;
-     /* justify-content: space-around; */
      flex-direction: column;
      align-items: center;
  }
@@ -98,7 +97,49 @@ body{
     color: #6C6C6C;
     font-size: 14px;
     margin-top: 6px;
-    overflow: hidden;
  }
 
-  /* -----Main-container 2nd part *----/
+  /* -----Main-container 2nd part -----------*/
+  .feedbacks{
+      margin-top: 40px;
+      display: flex;
+      width:50%;
+      justify-content: space-between;
+      box-shadow: 2px 1px 4px rgb(128, 118, 118);
+      padding: 20px;
+      margin-bottom: 60px;
+      border-radius: 10px;
+  }
+  .same-design{
+      color: rgb(133, 90, 33);
+  }
+  .input-design{
+      border: 3px solid rgb(83, 69, 41);
+      padding: 5px;
+  }
+  .feedback-button{
+      background-color: rgb(30, 91, 151);
+      color: white;
+      padding: 6px;
+      border-radius: 6px;
+      margin: 5px;
+  }
+  .fa-star.unfilled{
+    color: rgb(112, 99, 99);
+  }
+
+    /*-------------------- footer Start-------------- */
+    .footer-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+        margin-bottom: 15px;
+    }
+    .footer-logo img{
+        margin-top: 10px;
+        position: relative;
+        width: 400px;
+        height: 130px;
+    }
+     
